@@ -1,3 +1,7 @@
+23/11/15
+  Fix for keyboards shortcuts using Alt failing
+  Fix for window not unmapping with client_to_desktop
+
 16/11/15
   Modifying key ALTSuper changed to AltSuper for consistency
   One value for DEFAULTMODE sets all desktops to that mode
